--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h2>Hello World!</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, pariatur quidem expedita officia quo optio
+        magni saepe, esse temporibus molestias est dolorum, ducimus voluptatem incidunt?</p>
 </body>
+
 </html>
